--- a/db/rozgrywki.properties
+++ b/db/rozgrywki.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Fri Jan 21 17:44:18 CET 2022
+#Fri Jan 21 19:10:50 CET 2022
 tx_timestamp=0
-modified=no
+modified=yes
 version=2.5.0
